--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
   </head>
   <body>
     <header class="header">
-      <a href="#" class="logo">Raksahk</a>
+      <a href="#" class="logo">Rakshak</a>
       <nav class="navbar">
         <a href="#" class="home active">Home</a>
-        <a href="#" class="Servies">Servies</a>
-        <a href="#" class="=portfolio">Portfolio</a>
-        <a href="#" class="About">About</a>
-        <a href="#" class="contact">contact</a>
+        <a href="#" class="bio">Bio</a>
+        <a href="#" class="=Education">Education</a>
+        <a href="#" class="Skills">Skills</a>
+        <a href="#" class="contact">Contact</a>
       </nav>
     </header>
 
     <section class="main">
-      <div class="main-content">
-        <h1>Hi, I'm Rakshak Kumar</h1>
+      <div class="content">
+        <h1>Hi, I'm Rakshak Kumar</h1>     
         <h3>Frontend Developer</h3>
         <p>
           A passion for creating dynamic user experiences, I craft innovative
@@ -30,9 +30,15 @@
         </p>
         <div class="btn-box">
           <a href="#">Hire Me</a>
-          <a href="#">Instant Job</a>
+          <a href="#">Let's Talk</a>
         </div>
       </div>
+    </section>
+    <section class="icons">
+      <a href="#" class="social">Linkedin</a>
+      <a href="#" class="social">Instagram</a>
+      <a href="#" class="social">Github</a>
+      <a href="#" class="social">X</a>
     </section>
   </body>
 </html>
