--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rakshak kumar portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"> -->
   </head>
+  
   <body>
     <header class="header">
       <a href="#" class="logo">Rakshak</a>
@@ -19,7 +24,7 @@
     </header>
 
     <section class="main">
-      <div class="content">
+      <div class="main-content">
         <h1>Hi, I'm Rakshak Kumar</h1>     
         <h3>Frontend Developer</h3>
         <p>
@@ -33,12 +38,15 @@
           <a href="#">Let's Talk</a>
         </div>
       </div>
+      <div class="main-icons">
+        <a href="#" class="social"><i class='bx bxl-linkedin'></i></a>
+        <a href="#" class="social"><i class='bx bxl-github'></i></a>
+      <a href="#" class="social"><i class='bx bxl-instagram'></i></a>
+      </div>
     </section>
-    <section class="icons">
-      <a href="#" class="social">Linkedin</a>
-      <a href="#" class="social">Instagram</a>
-      <a href="#" class="social">Github</a>
-      <a href="#" class="social">X</a>
-    </section>
+
+    <span class="main-imgHover"></span>
+
+    
   </body>
 </html>
