--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <section class="main">
       <div class="main-content">
-        <h1>Hi, I'm Rakshak Kumar</h1>     
-        <h3>Frontend Developer</h3>
+        <h1 >Hi, I'm Rakshak Kumar</h1>     
+        <h3 >Frontend Developer</h3>
         <p>
           A passion for creating dynamic user experiences, I craft innovative
           solutions using cutting-edge technologies. My skill include
@@ -39,14 +39,15 @@
         </div>
       </div>
       <div class="main-icons">
-        <a href="#" class="social"><i class='bx bxl-linkedin'></i></a>
-        <a href="#" class="social"><i class='bx bxl-github'></i></a>
-      <a href="#" class="social"><i class='bx bxl-instagram'></i></a>
+        <a href="https://www.linkedin.com/in/rakshak-kumar-6a879720a/" class="social" target="_blank"><i class='bx bxl-linkedin'></i></a>
+        <a href="https://github.com/RAKSHAKKUMAR" class="social" target="_blank"><i class='bx bxl-github'></i></a>
+      <a href="#" class="social" target="_blank"><i class='bx bxl-instagram'></i></a>
       </div>
     </section>
 
     <span class="main-imgHover"></span>
 
-    
+       <!-- Link to JavaScript file -->
+    <script src="script.js"></script>
   </body>
 </html>
